--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,13 +29,69 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      
+      <!-- <--Timeblocks go here --> 
+      <div class="container">
+        <div class="row time-block" id="09">
+          <div class="col-1 hour pt-2">9AM</div>
+          <textarea class="col-10 plan" type="text" id="09"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="10">
+          <div class="col-1 hour pt-2">10AM</div>
+          <textarea class="col-10 plan" type="text" id="10"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="11">
+          <div class="col-1 hour pt-2">11AM</div>
+          <textarea class="col-10 plan" type="text" id="11"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="12">
+          <div class="col-1 hour pt-2" value="12PM">12PM</div>
+          <textarea class="col-10 plan" type="text" id="12"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="13">
+          <div class="col-1 hour pt-2">1PM</div>
+          <textarea class="col-10 plan" type="text" id="13"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="14">
+          <div class="col-1 hour pt-2">2PM</div>
+          <textarea class="col-10 plan" type="text" id="14"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="15">
+          <div class="col-1 hour pt-2">3PM</div>
+          <textarea class="col-10 plan" type="text" id="15"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="16">
+          <div class="col-1 hour pt-2">4PM</div>
+          <textarea class="col-10  plan" type="text" id="16"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
+        <div class="row time-block" id="17">
+          <div class="col-1 hour pt-2">5PM</div>
+          <textarea class="col-10 plan" type="text" id="17"></textarea>
+          <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
+        </div>
+  
     </div>
     
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
-    <script src="./js/js.js"></script>
+    <script src="./assets/js/script.js"></script>
   </body>
 </html>
