--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 
   <body>
     <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
+      <h1 class="display-3 text-sm-start text-md-start">Work Day Scheduler</h1>
+      <p class="lead text-sm-start text-md-start" >A simple calendar app for scheduling your work day</p>
+      <p id="currentDay" class="lead text-sm-start text-md-start"></p>
     </header>
     <div class="container">
       
@@ -34,7 +34,7 @@
       <div class="container">
         <div class="row time-block" id="09">
           <div class="col-1 hour pt-2">9AM</div>
-          <textarea class="col-10 plan" type="text" id="09"></textarea>
+          <textarea class="col-10 plan " type="text" id="09"></textarea>
           <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
         </div>
   
