updating read me

--- a/index.html
+++ b/index.html
@@ -33,14 +33,14 @@
       <!-- <--Timeblocks go here --> 
       <div class="container">
         <div class="row time-block" id="09">
-          <div class="col-1 hour pt-2">9AM</div>
-          <textarea class="col-10 plan " type="text" id="09"></textarea>
+          <div class="col-1 hour pt-2 div">9AM</div>
+          <textarea class="col-7 col-10 " type="text" id="09"></textarea>
           <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
         </div>
   
         <div class="row time-block" id="10">
           <div class="col-1 hour pt-2">10AM</div>
-          <textarea class="col-10 plan" type="text" id="10"></textarea>
+          <textarea class="col-10 plan " type="text" id="10"></textarea>
           <button class="col-1 saveBtn"><i class="fas fa-save"></i></button>
         </div>
   
